--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/Ronald115/miniPython#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "python-shell": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
